// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<progress-bar> component 0 percent 1`] = `
<bolt-progress-bar value="0">
  <div role="progressbar"
       class="c-bolt-progress-bar   c-bolt-progress-bar--animated"
       aria-valuemin="0"
       aria-valuemax="100"
       aria-valuenow="0"
       aria-label="0%"
  >
    <div class="c-bolt-progress-bar__track">
      <span class="c-bolt-progress-bar__fill "
            style="transform: translate3d(-100%, 0, 0);"
      >
      </span>
    </div>
    <div class="c-bolt-progress-bar__value">
      0%
    </div>
  </div>
</bolt-progress-bar>
`;

exports[`<progress-bar> component 100 percent 1`] = `
<bolt-progress-bar value="100">
  <div role="progressbar"
       class="c-bolt-progress-bar is-filled  c-bolt-progress-bar--animated"
       aria-valuemin="0"
       aria-valuemax="100"
       aria-valuenow="100"
       aria-label="100%"
  >
    <div class="c-bolt-progress-bar__track">
      <span class="c-bolt-progress-bar__fill c-bolt-progress-bar__fill--at-max"
            style="transform: translate3d(0%, 0, 0);"
      >
      </span>
    </div>
    <div class="c-bolt-progress-bar__value">
      100%
    </div>
  </div>
</bolt-progress-bar>
`;

exports[`<progress-bar> component adds class via Drupal Attributes 1`] = `
<bolt-progress-bar class="u-bolt-margin-top-medium"
                   value="65"
>
  <div role="progressbar"
       class="c-bolt-progress-bar   c-bolt-progress-bar--animated"
       aria-valuemin="0"
       aria-valuemax="100"
       aria-valuenow="65"
       aria-label="65%"
  >
    <div class="c-bolt-progress-bar__track">
      <span class="c-bolt-progress-bar__fill "
            style="transform: translate3d(-35%, 0, 0);"
      >
      </span>
    </div>
    <div class="c-bolt-progress-bar__value">
      65%
    </div>
  </div>
</bolt-progress-bar>
`;

exports[`<progress-bar> component animated prop: true 1`] = `
<bolt-progress-bar value="65"
                   animated
>
  <div role="progressbar"
       class="c-bolt-progress-bar   c-bolt-progress-bar--animated"
       aria-valuemin="0"
       aria-valuemax="100"
       aria-valuenow="65"
       aria-label="65%"
  >
    <div class="c-bolt-progress-bar__track">
      <span class="c-bolt-progress-bar__fill "
            style="transform: translate3d(-35%, 0, 0);"
      >
      </span>
    </div>
    <div class="c-bolt-progress-bar__value">
      65%
    </div>
  </div>
</bolt-progress-bar>
`;

exports[`<progress-bar> component basic usage 1`] = `
<bolt-progress-bar value="65">
  <div role="progressbar"
       class="c-bolt-progress-bar   c-bolt-progress-bar--animated"
       aria-valuemin="0"
       aria-valuemax="100"
       aria-valuenow="65"
       aria-label="65%"
  >
    <div class="c-bolt-progress-bar__track">
      <span class="c-bolt-progress-bar__fill "
            style="transform: translate3d(-35%, 0, 0);"
      >
      </span>
    </div>
    <div class="c-bolt-progress-bar__value">
      65%
    </div>
  </div>
</bolt-progress-bar>
`;

exports[`<progress-bar> component max prop: 12 1`] = `
<bolt-progress-bar value="7"
                   value-format="step"
                   max="12"
>
  <div role="progressbar"
       class="c-bolt-progress-bar   c-bolt-progress-bar--animated"
       aria-valuemin="0"
       aria-valuemax="12"
       aria-valuenow="7"
       aria-label="7 / 12"
  >
    <div class="c-bolt-progress-bar__track">
      <span class="c-bolt-progress-bar__fill "
            style="transform: translate3d(-41.666666666667%, 0, 0);"
      >
      </span>
    </div>
    <div class="c-bolt-progress-bar__value">
      7 / 12
    </div>
  </div>
</bolt-progress-bar>
`;

exports[`<progress-bar> component renders with Shadow DOM 1`] = `
<div
  aria-label="65%"
  aria-valuemax="100"
  aria-valuemin="0"
  aria-valuenow="65"
  class="c-bolt-progress-bar"
  role="progressbar"
  style=""
>
  
        
  <div
    class="c-bolt-progress-bar__track"
    style=""
  >
    
          
    <span
      class="c-bolt-progress-bar__fill"
      style="transform:translate3d(-35%, 0, 0);"
    >
      
          
    </span>
    
        
  </div>
  
        
  <div
    class="c-bolt-progress-bar__value"
    style=""
  >
    <!---->
    65%
    <!---->
  </div>
  
      
</div>
`;

exports[`<progress-bar> component renders with Shadow DOM 2`] = `
<bolt-progress-bar
  style=""
  value="65"
/>
`;

exports[`<progress-bar> component renders without Shadow DOM 1`] = `
<bolt-progress-bar
  no-shadow=""
  style=""
  value="65"
>
  <!---->
  
      
  <div
    aria-label="65%"
    aria-valuemax="100"
    aria-valuemin="0"
    aria-valuenow="65"
    class="c-bolt-progress-bar"
    role="progressbar"
    style=""
  >
    
        
    <div
      class="c-bolt-progress-bar__track"
      style=""
    >
      
          
      <span
        class="c-bolt-progress-bar__fill"
        style="transform:translate3d(-35%, 0, 0);"
      >
        
          
      </span>
      
        
    </div>
    
        
    <div
      class="c-bolt-progress-bar__value"
      style=""
    >
      <!---->
      65%
      <!---->
    </div>
    
      
  </div>
  
    
  <!---->
</bolt-progress-bar>
`;

exports[`<progress-bar> component value format prop: percent 1`] = `
<bolt-progress-bar value="65"
                   value-format="percent"
>
  <div role="progressbar"
       class="c-bolt-progress-bar   c-bolt-progress-bar--animated"
       aria-valuemin="0"
       aria-valuemax="100"
       aria-valuenow="65"
       aria-label="65%"
  >
    <div class="c-bolt-progress-bar__track">
      <span class="c-bolt-progress-bar__fill "
            style="transform: translate3d(-35%, 0, 0);"
      >
      </span>
    </div>
    <div class="c-bolt-progress-bar__value">
      65%
    </div>
  </div>
</bolt-progress-bar>
`;

exports[`<progress-bar> component value format prop: step 1`] = `
<bolt-progress-bar value="65"
                   value-format="step"
>
  <div role="progressbar"
       class="c-bolt-progress-bar   c-bolt-progress-bar--animated"
       aria-valuemin="0"
       aria-valuemax="100"
       aria-valuenow="65"
       aria-label="65 / 100"
  >
    <div class="c-bolt-progress-bar__track">
      <span class="c-bolt-progress-bar__fill "
            style="transform: translate3d(-35%, 0, 0);"
      >
      </span>
    </div>
    <div class="c-bolt-progress-bar__value">
      65 / 100
    </div>
  </div>
</bolt-progress-bar>
`;
